--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "history": "^5.1.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "3.3.1"
